# urigen

./: .gitignore  CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
contracts/agents/: codex_nl_smoke_agent.yaml  codex_uri_smoke_agent.yaml  invoices_agent.yaml
examples/20_touri_capabilities/: ABOUT.md  browser_open_mock.uri.capability.yaml  check_health_graph.uri.capability.yaml  weather_flow_dry_run.uri.capability.yaml  website_screenshot_schedule.uri.capability.yaml  website_screenshot_schedule_dry_run.uri.capability.yaml  www_landing_monitor_cron.uri.capability.yaml
tests/: conftest.py
