[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "urigen"
version = "0.1.1"
description = "URI Ecosystem Generator - proposals, ecosystem artifacts, verification, and explain maps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "touri",
    "uri2flow",
    "uri3",
]
license = "Apache-2.0"

[project.scripts]
urigen = "urigen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["urigen*"]

[tool.setuptools.package-data]
urigen = ["templates/*.j2", "schemas/*.json"]

[tool.uv.sources]
touri = { path = "../touri", editable = true }
uri2flow = { path = "../uri2flow", editable = true }
uri3 = { path = "../uri3", editable = true }

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }

[project.optional-dependencies]
dev = ["pytest>=7.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]
